# mooneye-gb

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.markdown  build_win.bat  run_acceptance_tests.sh  rustfmt.toml
.circleci/: config.yml
.github/: boot_roms.tar.gpg  dependabot.yml
.github/scripts/: install_wla-dx.sh  unpack_bootroms.sh
.github/workflows/: ci.yml
.travis/: MD5SUMS  boot_roms.tar.enc  dmg0_boot.bin.enc  dmg_boot.bin.enc  install_wla-dx.sh  mgb_boot.bin.enc  sgb2_boot.bin.enc  sgb_boot.bin.enc
core/: Cargo.toml
core/src/: config.rs  cpu.rs  emulation.rs  gameboy.rs  hardware.rs  lib.rs  machine.rs  util.rs
core/src/config/: bootrom.rs  cartridge.rs  mod.rs  model.rs
core/src/cpu/: decode.rs  disasm.rs  execute.rs  mod.rs  ops.rs  register_file.rs  registers.rs  test.rs
core/src/cpu/test/: cb_test.rs  mod.rs  test_0x.rs  test_1x.rs  test_2x.rs  test_3x.rs  test_4x.rs  test_5x.rs  test_6x.rs  test_7x.rs  test_add16.rs  test_add16_sp_e.rs  test_ax.rs  test_cx.rs  test_dec16.rs  test_ex.rs  test_fx.rs  test_inc16.rs  test_load16.rs  test_load16_hl_sp_e.rs  test_load16_sp_hl.rs  test_pop16.rs  test_push16.rs
core/src/emulation/: mod.rs
core/src/hardware/: apu.rs  bootrom.rs  cartridge.rs  gpu.rs  interrupts.rs  irq.rs  joypad.rs  mod.rs  ppu.rs  serial.rs  timer.rs  work_ram.rs
core/src/hardware/apu/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  envelope.rs  mod.rs  sweep.rs  wave_duty.rs
core/src/hardware/cartridge/: mod.rs
core/src/hardware/gpu/: mod.rs
core/src/hardware/serial/: mod.rs
core/src/machine/: mod.rs  perf_counter.rs
core/src/util/: int.rs  mod.rs
core/tests/: mooneye_suite.rs
docs/: accuracy.markdown
docs/accuracy/: bootrom.markdown  cpu.markdown  joypad.markdown  timer.markdown
src/: cmdline.rs  config.rs  errors.rs  fps_counter.rs  frame_times.rs  frontend.rs  gameboy.rs  main.rs  perf_counter.rs
src/acceptance_tests/: fixture.rs  mod.rs
src/backend/: mod.rs
src/config/: bootrom.rs  cartridge.rs  mod.rs  model.rs
src/cpu/: disasm.rs  mod.rs  ops.rs  registers.rs
src/emulation/: mod.rs  time.rs
src/fileio/: mod.rs
src/frontend/: emu_thread.rs  fps.rs  gui.rs  mod.rs  renderer.rs
src/hardware/: bootrom.rs  clock.rs  internal_ram.rs  irq.rs  joypad.rs  mod.rs  timer.rs  work_ram.rs
src/machine/: mod.rs  perf_counter.rs  pulse.rs
src/util/: int.rs  mod.rs  program_result.rs
tests/: LICENSE  Makefile
tests/acceptance/: add_sp_e_timing.s  boot_div-S.s  boot_div-dmg0.s  boot_div-dmgABCmgb.s  boot_div2-S.s  boot_hwio-G.s  boot_hwio-S.s  boot_hwio-dmg0.s  boot_hwio-dmgABCXmgb.s  boot_hwio-dmgABCmgb.s  boot_regs-dmg.s  boot_regs-dmg0.s  boot_regs-dmgABC.s  boot_regs-dmgABCX.s  boot_regs-mgb.s  boot_regs-sgb.s  boot_regs-sgb2.s  call_cc_timing.s  call_cc_timing2.s  call_timing.s  call_timing2.s  di_timing-GS.s  di_timing.s  div_timing.s  dmg_boot_regs.s  dmgmgb_boot_hwio.s  ei_sequence.s  ei_timing.s  halt_ime0_ei.s  halt_ime0_nointr_timing.s  halt_ime1.s  ie_bits.s  (+21 more)
(+268 files in other folders)
