[workspace]
members = ["core"]

[package]
name = "mooneye-gb"
version = "0.2.0-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
anyhow = "1.0"
arraydeque = "0.4"
gilrs = "0.8"
glium = "0.29"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
log = "0.4"
mooneye-gb-core = { version = "0.2.0-pre", path = "core" }
nalgebra = "0.27"
num-traits = "0.2"
pico-args = "0.4"
serde = "1.0"
serde_derive = "1.0"
simplelog = "0.9"

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 2

[features]
include-bootroms = ["mooneye-gb-core/include-bootroms"]
