[package]
name = "mooneye-gb-core"
version = "0.2.0-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[lib]
name = "mooneye_gb"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.5"
bitflags = "1.0"
crc = "1.3"
directories = "2.0"
log = "0.4"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
snafu = "0.6"

[dev-dependencies]
quickcheck = "0.9"

[features]
include-bootroms = []
